# agentguard

./: .gitignore  README.md  pyproject.toml
api/: handler.py  local_server.py
examples/: basic_guarded_agent.py  full_pipeline.py  multi_tool_agent.py  real_bedrock_demo.py
src/agentguard/: __init__.py  config.py
src/agentguard/audit/: __init__.py  checkpoint.py  log.py  serializer.py
src/agentguard/bedrock/: __init__.py  session.py  tool_use.py  wrapper.py
src/agentguard/circuit/: __init__.py  breaker.py  registry.py
src/agentguard/contracts/: __init__.py  conditions.py  guards.py  models.py  policies.py
src/agentguard/monitor/: __init__.py  bus.py  detectors.py  events.py  handlers.py
tests/: conftest.py  test_audit.py  test_bedrock.py  test_circuit.py  test_contracts.py  test_monitor.py
web/: package-lock.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/components/: ActivityLog.tsx  PipelineEvent.tsx  ResultPanel.tsx  ScenarioCard.tsx
