[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentguard"
version = "0.1.0"
description = "AI Agent Behavioral Safety Framework for Amazon Bedrock"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.0",
    "boto3>=1.28",
]

[project.optional-dependencies]
async = ["aiobotocore>=2.7"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "mypy>=1.5",
    "ruff>=0.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agentguard"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
strict = true
packages = ["agentguard"]
mypy_path = "src"

[tool.ruff]
src = ["src", "tests"]
target-version = "py310"
